--- a/html/tut19.html
+++ b/html/tut19.html
@@ -10,7 +10,7 @@
             background-color: rgb(182, 28, 28);
             height: 50px;
             width: 100px;
-            border:4px solid green; /*this is used to writw width,style and color in a single line*/
+            border:4px solid green; /*this is used to write width,style and color in a single line*/
             /* border-color: green;
             border-style: double;
             border-width: 5px; */
